# BuildYourOwnSiri

./: .gitattributes  README.md  settings.gradle.kts
app/: build.gradle.kts
app/src/: CMakeLists.txt
app/src/androidTest/java/com/example/byos/: ExampleInstrumentedTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: native-lib.cpp
app/src/main/cpp/include/: ggml-blas.h  ggml-cann.h  ggml-cpp.h  ggml-cuda.h  ggml-metal.h  ggml-opencl.h  ggml-opt.h  ggml-rpc.h  ggml-sycl.h  ggml-vulkan.h  ggml-webgpu.h  ggml_cpu.h  llama.h  whisper.h
app/src/main/java/com/example/byos/: FunctionHandler.kt  FunctionRegistry.kt  MainActivity.kt  NativeBridge.kt
app/src/main/java/com/example/byos/ui/theme/: Color.kt  Theme.kt  Type.kt
app/src/main/res/layout/: activity_main.xml
app/src/main/res/values/: strings.xml  themes.xml
app/src/test/java/com/example/byos/: ExampleUnitTest.kt
model_pack/: build.gradle.kts
